package seedu.studymate.habits;

/**
 * Represents the possible results when attempting to increment a habit's streak.
 * Used to indicate whether the streak increment was on time, too early, or too late.
 */
public enum StreakResult {
    TOO_EARLY,
    ON_TIME,
    TOO_LATE
}
